Added class for storage ANSI-colors